# handshake-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci-build.yml
handhake-app/: Cargo.toml
handhake-app/src/: main.rs
handshake-app/: Cargo.toml
handshake-app/src/: main.rs
handshake-protocol/: Cargo.toml
handshake-protocol/src/: acts.rs  error.rs  handshake_protocol.rs  handshake_state.rs  lib.rs  nonce.rs  tag.rs  util.rs
handshake-protocol/tests/: handshake_protocol_test.rs
lnd-docker/: bitcoin-cli.sh  docker-compose.yml  init-lnd.sh  lncli-create.expect  lncli.sh
