[package]
name = "handhake-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
handshake-protocol ={ path = "../handshake-protocol"}
secp256k1 = { version = "0.27.0", features = ["rand", "rand-std"] }
log = "0.4.20"
