[package]
name = "handshake-protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
secp256k1 = { version = "0.27.0", features = ["rand", "rand-std"] }
bytes = "1.5.0"
hex = "0.4.3"
sha2 = "0.10.8"
hkdf = "0.12.3"
chacha20-poly1305-aead = "0.1.2"
